promeutheus_ingress/alertmanager_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  annotations:    
    kubernetes.io/ingress.class: nginx
  name: alertmanager
  namespace: monitoring
spec:  
  rules:  
  - host: alertmanager.10.20.206.60.nip.io
    http:      
      paths:      
        - path: /
          pathType: Prefix
          backend:          
            service: 
              name: prometheus-kube-prometheus-alertmanager
              port: 
                number: 9093
