promeutheus_ingress/grafana_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  annotations:    
    kubernetes.io/ingress.class: nginx
  name: grafana
  namespace: monitoring
spec:  
  rules:  
  - host: grafana.10.20.206.60.nip.io
    http:      
      paths:      
        - path: /
          pathType: Prefix
          backend:          
            service: 
              name: prometheus-grafana 
              port: 
                number: 80
