promeutheus_ingress/promethueus_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  annotations:    
    kubernetes.io/ingress.class: nginx
  name: promeutheus
  namespace: monitoring
spec:  
  rules:  
  - host: promeutheus.10.20.206.60.nip.io
    http:      
      paths:      
        - path: /
          pathType: Prefix
          backend:          
            service: 
              name: prometheus-kube-prometheus-prometheus
              port: 
                number: 9090
